modificato l'estenzione del file login in .html

--- a/fileStatici/registrazione.html
+++ b/fileStatici/registrazione.html
@@ -55,7 +55,7 @@
 
 <div id='titoloBasso'>
 	<p>
-		Vai alla pagina di <a href='/login'> login</a>
+		Vai alla pagina di <a href='/login.html'> login</a>
 	</p>
 
 <div id='footer'> copyright by TarG 2009 - present </div>
