--- a/fileStatici/logOnInvalid.html
+++ b/fileStatici/logOnInvalid.html
@@ -8,13 +8,13 @@
 	<meta http-equiv="refresh" content="5; url='/login'" />
 	<link rel="stylesheet" type="text/css" href="./main.css" />
 </head>
-<body>
+<body id='invalidLoginBody'>
 	
-<h2>
+<h2 id='invalidLoginTitle'>
 	Login non effettuato o errato, redirezione in corso ...
 </h2>
 
-	<p>
+	<p id='invalidLoginParag'>
 		Entro 5 secondi verrai rediretto alla pagina del <a href='/login'>login</a>
 	</p>
 	
