--- a/fileStatici/registrazione.html
+++ b/fileStatici/registrazione.html
@@ -5,8 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>User registration on db</title>
+	<link rel='stylesheet' type='text/css' href='./main.css' />
+
 </head>
-<body>
+<body style='background: rgb(95, 230, 95);'>
 	
 	<h1>
 		Registration page
@@ -67,142 +69,4 @@
 </html>
 
 
-<style>
-
-*, body{
-	box-sizing: border-box;
-}
-
-body{
-	padding: 0;
-	margin: 0;
-	background: rgb(95, 230, 95);
-	overflow: hidden;
-}
-
-
-body h1{
-	margin: 22px 7px;
-	/* background: rgb(185, 219, 185); */
-	color: rgb(143, 101, 101);
-	
-}
-
-
-#fromLogInBox  div
-{
-	margin: 22px 7px;
-}
-
-
-#fromLogInBox  
-{
-
-	margin: 77px 7px;
-}
-
-
-	#fromLogInBox{
-
-		width: 85%;
-		height: 350px;
-		border: solid rgb(8, 73, 51) 11px;
-		margin: 0 auto;
-		padding: 11px;
-
-	}
-
-		#fromLogInBox  input[type=text]{
-			/* position: relative; */
-			display: block;
-		}
-
-		#fromLogInBox  input[type=submit]
-		{
-			padding:0;
-			margin:0;
-			width: 100%;
-
-		}
-
-		input[type=submit]:hover{
-			cursor: pointer;
-		}
-
-
-		#fromLogInBox  input{
-			display: block;
-			width: 100%;
-		}
-
-/* 
-
-	#titoloBasso div{
-	text-align: center;
-	width: 100vw;
-	position: absolute;
-	display: inline-block;
-	border: solid #ddd 1px;
-	font-size: 1.4em;
-	font-family: fantasy;
-	background: rgb(4, 4, 44);
-	color: rgb(48, 112, 68);
-
-} 
-
-*/
-
-#titoloBasso{
-	position: absolute;
-	bottom: 0px;
-}
-
-
-#fromLogInBox  span
-{
-  position: relative;
-  left: -11px;
-}
-
-#fromLogInBox  input[type=checkbox]
-{
-  position: relative;
-  left: -11px;
-  float: left;
-  width: 33px;
-}
-
-
-
-#footer{
-	position: absolute;
-	bottom: 0px;
-	width: 100vw;
-	background: rgb(6, 6, 54);
-	color: #ddd;
-	padding: 7px;
-	font-size: 1.2em;
-	text-align: center;
-}
-
-
-#bottom-menu{
-	
-	/* position: absolute;  */
-	position: relative;
-	top: 55px;
-	padding: 7px; 	
-	bottom: 22px; 
-	width: 100vw;
-}
-
-#bottom-menu a:hover{
-	color: white;
-}
-
-#bottom-menu a{
-	text-decoration: none;
-}
-
-</style>
 
