--- a/fileStatici/login.html
+++ b/fileStatici/login.html
@@ -5,8 +5,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Home page logIn</title>
+
+	<link rel='stylesheet' type='text/css' href='./main.css' />
+
 </head>
-<body>
+<body id='loginHtml'>
 	
 	<h1>
 		Login page  
@@ -15,7 +18,7 @@
 
 
 
-<div id='fromLogInBox'>
+<div id='fromLogInBoxPage'>
 
 	<form method="post" action='/postLogIn'>
 
@@ -54,134 +57,3 @@
 
 </body>
 </html>
-
-
-<style>
-
-*, body{
-	box-sizing: border-box;
-}
-
-body{
-	padding: 0;
-	margin: 0;
-	background: rgb(185, 219, 185);
-	overflow: hidden;
-}
-
-
-body h1{
-	margin: 22px 7px;
-	background: rgb(185, 219, 185);
-	color: rgb(63, 29, 29);
-	
-}
-
-
-#fromLogInBox  div
-{
-	margin: 22px 7px;
-}
-
-
-#fromLogInBox  
-{
-
-	margin: 77px 7px;
-}
-
-
-	#fromLogInBox{
-
-		width: 85%;
-		height: 350px;
-		border: solid mediumaquamarine 11px;
-		margin: 0 auto;
-		padding: 11px;
-
-	}
-
-#fromLogInBox label{
-	margin-left: 7px;
-}
-
-		#fromLogInBox  input[type=text], input[type=password]{
-			/* position: relative; */
-			display: block;
-			margin: 7px 0 0 0;
-
-		}
-
-		#fromLogInBox  input[type=submit]
-		{
-			padding:0;
-			margin:0;
-			width: 100%;
-
-		}
-
-		input[type=submit]:hover{
-			cursor: pointer;
-		}
-
-
-		#fromLogInBox  input{
-			display: block;
-			width: 100%;
-		}
-
-#titoloBasso div{
-	/* text-align: center;
-	width: 100vw;
-	position: absolute;
-	display: inline-block;
-	border: solid #ddd 1px;
-	font-size: 1.4em;
-	font-family: fantasy;
-	background: rgb(4, 4, 44);
-	color: rgb(48, 112, 68); */
-
-	position: absolute;
-	bottom: 0px;
-	width: 100vw;
-	background: rgb(6, 6, 54);
-	color: #ddd;
-	padding: 7px;
-	font-size: 1.2em;
-	text-align: center;
-}
-
-#titoloBasso{
-	position: absolute;
-	bottom: 0px;
-}
-
-#bottom-menu{
-	
-	position: absolute; 
-	padding: 7px; 	
-	bottom: 22px; 
-	width: 100vw;
-}
-
-#bottom-menu a:hover{
-	color: white;
-}
-
-#bottom-menu a{
-	text-decoration: none;
-}
-
-#footer{
-	position: absolute;
-	bottom: 0px;
-	width: 100%;
-	background: rgb(6, 6, 54);
-	color: #ddd;
-	padding: 7px;
-	font-size: 1.2em;
-	text-align: center;
-}
-
-</style>
-
