--- a/fileStatici/login.html
+++ b/fileStatici/login.html
@@ -45,7 +45,7 @@
 </div>
 
 
-<div id='titoloBasso'>
+<div id='titoloBassoPagLogIn'>
 	<p id='bottom-menu' >
 		<a href='/paginaHome'>Home page</a> | <a href='/registrazione.html'>Register page</a>
 	</p>
@@ -57,3 +57,5 @@
 
 </body>
 </html>
+
+
